Spacing issue

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -39,7 +39,7 @@ nav {
 nav li {
   float: left;
   text-align: center;
-  width: 14.5%;
+  width: 14%;
   margin-left: 1em;
   margin-top: 1em;
 }
